# CC-NDP

./: .gitignore  .pre-commit-config.yaml  README.md  logging.toml  pyproject.toml
ccndp/: make_experiments.py  plot.py  solve.py
ccndp/classes/: BB.py  DeterministicEquivalent.py  Edge.py  FacilityNode.py  FlowMIS.py  MIS.py  MasterProblem.py  Node.py  ProblemData.py  Resource.py  Result.py  SNC.py  SinkNode.py  SourceNode.py  SubProblem.py  __init__.py
ccndp/functions/: create_master.py  create_subproblems.py
ccndp/utils/: JsonDecoder.py  JsonEncoder.py
instances/: README.md  instances.csv  make_files.py  r01.4.ndp  r01.5.ndp  r01.6.ndp  r01.7.ndp  r01.8.ndp  r01.9.ndp  r02.4.ndp  r02.5.ndp  r02.6.ndp  r02.7.ndp  r02.8.ndp  r02.9.ndp  r03.4.ndp  r03.5.ndp  r03.6.ndp  r03.7.ndp  r03.8.ndp  r03.9.ndp  r04-1-128.ndp  r04-1-16.ndp  r04-1-256.ndp  r04-1-32.ndp  r04-1-512.ndp  r04-1-64.ndp  r04-2-128.ndp  r04-2-16.ndp  r04-2-256.ndp  r04-2-32.ndp  r04-2-512.ndp  r04-2-64.ndp  r04-3-0-128.ndp  r04-3-0-16.ndp  r04-3-0-256.ndp  r04-3-0-64.ndp  r04-3-0.2-128.ndp  r04-3-0.2-16.ndp  r04-3-0.2-32.ndp  (+527 more)
instances/base/: README.md  r06.6.ndp  r06.9.ndp  r07.6.ndp  r08.6.ndp  r08.9.ndp  r09.6.ndp  r09.9.ndp  r10.6.ndp  r10.9.ndp
instances/scenarios/: README.md
instances/single-commodity/: README.md  instances.csv  r04-3-0-128.ndp  r04-3-0-16.ndp  r04-3-0-256.ndp  r04-3-0-32.ndp  r04-3-0-512.ndp  r04-3-0-64.ndp  r04-3-0.2-128.ndp  r04-3-0.2-16.ndp  r04-3-0.2-256.ndp  r04-3-0.2-32.ndp  r04-3-0.2-512.ndp  r04-3-0.2-64.ndp  r04-6-0-128.ndp  r04-6-0-16.ndp  r04-6-0-256.ndp  r04-6-0-32.ndp  r04-6-0-512.ndp  r04-6-0-64.ndp  r04-6-0.2-128.ndp  r04-6-0.2-16.ndp  r04-6-0.2-256.ndp  r04-6-0.2-32.ndp  r04-6-0.2-512.ndp  r04-6-0.2-64.ndp  r04-7-128.ndp  r04-7-16.ndp  r04-7-256.ndp  r04-7-32.ndp  r04-7-512.ndp  r04-7-64.ndp  r04-8-128.ndp  r04-8-16.ndp  r04-8-256.ndp  r04-8-32.ndp  r04-8-512.ndp  r04-8-64.ndp  r04-9-0-128.ndp  r04-9-0-16.ndp  (+232 more)
instances/test/: r04-3-0.2-256.ndp  r04-3-0.2-512.ndp  r04-6-0-512.ndp  r04-6-0.2-32.ndp  r04-6-0.2-512.ndp  r04-6-0.2-64.ndp  r04-9-0.2-32.ndp  r05-6-0.2-16.ndp  r05-6-0.2-256.ndp  r05-9-0-16.ndp  r06-3-0-16.ndp  r06-3-0.2-64.ndp  r06-6-0-256.ndp  r06-6-0.2-32.ndp  r06-9-0-512.ndp  r06-9-0.2-16.ndp  r07-3-0-256.ndp  r07-3-0.2-128.ndp  r07-3-0.2-16.ndp  r07-3-0.2-256.ndp  r07-6-0-512.ndp  r07-6-0.2-512.ndp  r07-9-0-128.ndp  r07-9-0.2-128.ndp  r07-9-0.2-64.ndp  r08-3-0.2-512.ndp  r08-6-0-16.ndp  r08-9-0.2-512.ndp  r09-3-0.2-128.ndp  r09-3-0.2-16.ndp  r09-6-0-16.ndp  r09-6-0-512.ndp  r09-6-0.2-128.ndp  r09-6-0.2-16.ndp  r09-6-0.2-512.ndp  r09-9-0-128.ndp  r09-9-0-16.ndp  r09-9-0.2-16.ndp  r09-9-0.2-64.ndp  r10-3-0-16.ndp  (+6 more)
notebooks/: numerical_experiments.ipynb  training_instances.ipynb
results/: README.md
src/: __init__.py  config.py  make_experiments.py  make_multi_commodity.py  make_single_commodity.py  plot.py  run.py  solve.py
(+2324 files in other folders)
